🧼 - Fix new spacing bug after position:fixing hiring button

--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -28,7 +28,7 @@ picture:has(.footer-border) {
   padding-block-start: 3rem;
   padding-inline: 1rem;
   // padding-block-end: 3rem;
-  margin-block-end: -3rem;
+  margin-block-end: -11rem;
 
   @include screen(lg) {
     padding-block-end: 3rem;
